Final_Project/Final_Project_Vitis/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
Nothing to build in platform 'Final_Top_Level'

00:54:55 **** Incremental Build of configuration Debug for project final_software ****
make all 
'Building file: ../src/lw_usb/MAX3421E.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/lw_usb/MAX3421E.o" -IC:/Users/Abdullah/Downloads/ECE385/Final_Project/Final_Project_Vitis/Final_Top_Level/export/Final_Top_Level/sw/Final_Top_Level/standalone_microblaze_0/bspinclude/include -mno-xl-reorder -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/lw_usb/MAX3421E.d" -MT"src/lw_usb/MAX3421E.o" -o "src/lw_usb/MAX3421E.o" "../src/lw_usb/MAX3421E.c"
In file included from C:/Users/Abdullah/Downloads/ECE385/Final_Project/Final_Project_Vitis/Final_Top_Level/export/Final_Top_Level/sw/Final_Top_Level/standalone_microblaze_0/bspinclude/include/xspi.h:306,
                 from ../src/lw_usb/MAX3421E.c:14:
../src/lw_usb/MAX3421E.c: In function 'SPI_init':
C:/Users/Abdullah/Downloads/ECE385/Final_Project/Final_Project_Vitis/Final_Top_Level/export/Final_Top_Level/sw/Final_Top_Level/standalone_microblaze_0/bspinclude/include/xstatus.h:45:41: warning: 'return' with a value, in function returning void [-Wreturn-type]
   45 | #define XST_DEVICE_NOT_FOUND            2L
      |                                         ^~
../src/lw_usb/MAX3421E.c:38:24: note: in expansion of macro 'XST_DEVICE_NOT_FOUND'
   38 |                 return XST_DEVICE_NOT_FOUND;
      |                        ^~~~~~~~~~~~~~~~~~~~
../src/lw_usb/MAX3421E.c:32:6: note: declared here
   32 | void SPI_init() {
      |      ^~~~~~~~
C:/Users/Abdullah/Downloads/ECE385/Final_Project/Final_Project_Vitis/Final_Top_Level/export/Final_Top_Level/sw/Final_Top_Level/standalone_microblaze_0/bspinclude/include/xstatus.h:44:41: warning: 'return' with a value, in function returning void [-Wreturn-type]
   44 | #define XST_FAILURE                     1L
      |                                         ^~
../src/lw_usb/MAX3421E.c:44:24: note: in expansion of macro 'XST_FAILURE'
   44 |                 return XST_FAILURE;
      |                        ^~~~~~~~~~~
../src/lw_usb/MAX3421E.c:32:6: note: declared here
   32 | void SPI_init() {
      |      ^~~~~~~~
../src/lw_usb/MAX3421E.c: In function 'MAX3421E_Task':
../src/lw_usb/MAX3421E.c:299:46: warning: suggest parentheses around comparison in operand of '&' [-Wparentheses]
  299 |         if (XGpio_DiscreteRead(&Gpio_int, 1) & 0x01 == 0) {
      |                                              ^
../src/lw_usb/MAX3421E.c: In function 'MaxGpxHandler':
../src/lw_usb/MAX3421E.c:335:14: warning: variable 'GPINIRQ' set but not used [-Wunused-but-set-variable]
  335 |         BYTE GPINIRQ;
      |              ^~~~~~~
'Finished building: ../src/lw_usb/MAX3421E.c'
' '
'Building file: ../src/lw_usb/hdmi_text_controller.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/lw_usb/hdmi_text_controller.o" -IC:/Users/Abdullah/Downloads/ECE385/Final_Project/Final_Project_Vitis/Final_Top_Level/export/Final_Top_Level/sw/Final_Top_Level/standalone_microblaze_0/bspinclude/include -mno-xl-reorder -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/lw_usb/hdmi_text_controller.d" -MT"src/lw_usb/hdmi_text_controller.o" -o "src/lw_usb/hdmi_text_controller.o" "../src/lw_usb/hdmi_text_controller.c"
In file included from C:/Users/Abdullah/Downloads/ECE385/Final_Project/Final_Project_Vitis/Final_Top_Level/export/Final_Top_Level/sw/Final_Top_Level/standalone_microblaze_0/bspinclude/include/xil_types.h:48,
                 from ../src/lw_usb/../lw_usb/hdmi_text_controller.h:6,
                 from ../src/lw_usb/hdmi_text_controller.c:4:
C:/Users/Abdullah/Downloads/ECE385/Final_Project/Final_Project_Vitis/Final_Top_Level/export/Final_Top_Level/sw/Final_Top_Level/standalone_microblaze_0/bspinclude/include/xparameters.h:490:36: warning: initialization of 'volatile struct TEXT_HDMI_STRUCT *' from 'int' makes pointer from integer without a cast [-Wint-conversion]
  490 | #define XPAR_GAMEIP_0_AXI_BASEADDR 0x44A10000
      |                                    ^~~~~~~~~~
../src/lw_usb/../lw_usb/hdmi_text_controller.h:31:54: note: in expansion of macro 'XPAR_GAMEIP_0_AXI_BASEADDR'
   31 | static volatile struct TEXT_HDMI_STRUCT* hdmi_ctrl = XPAR_GAMEIP_0_AXI_BASEADDR;
      |                                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~
../src/lw_usb/hdmi_text_controller.c:117:1: warning: return type defaults to 'int' [-Wimplicit-int]
  117 | hdmiTestWeek2()
      | ^~~~~~~~~~~~~
../src/lw_usb/hdmi_text_controller.c:117:1: warning: conflicting types for 'hdmiTestWeek2'
../src/lw_usb/../lw_usb/hdmi_text_controller.h:120:6: note: previous declaration of 'hdmiTestWeek2' with type 'void()'
  120 | void hdmiTestWeek2(); //call this for your Week 2 demo
      |      ^~~~~~~~~~~~~
../src/lw_usb/hdmi_text_controller.c: In function 'hdmiTestWeek2':
../src/lw_usb/hdmi_text_controller.c:140:46: warning: format '%x' expects argument of type 'unsigned int', but argument 3 has type 'uint32_t' {aka 'long unsigned int'} [-Wformat=]
  140 |                 printf ("Row: %d, Checksum: %x, Read-back Checksum: %x\n\r", j, checksum[j], readsum[j]);
      |                                             ~^                                  ~~~~~~~~~~~
      |                                              |                                          |
      |                                              unsigned int                               uint32_t {aka long unsigned int}
      |                                             %lx
../src/lw_usb/hdmi_text_controller.c:140:70: warning: format '%x' expects argument of type 'unsigned int', but argument 4 has type 'uint32_t' {aka 'long unsigned int'} [-Wformat=]
  140 |                 printf ("Row: %d, Checksum: %x, Read-back Checksum: %x\n\r", j, checksum[j], readsum[j]);
      |                                                                     ~^                       ~~~~~~~~~~
      |                                                                      |                              |
      |                                                                      unsigned int                   uint32_t {aka long unsigned int}
      |                                                                     %lx
'Finished building: ../src/lw_usb/hdmi_text_controller.c'
' '
'Building file: ../src/lw_usb/transfer.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/lw_usb/transfer.o" -IC:/Users/Abdullah/Downloads/ECE385/Final_Project/Final_Project_Vitis/Final_Top_Level/export/Final_Top_Level/sw/Final_Top_Level/standalone_microblaze_0/bspinclude/include -mno-xl-reorder -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/lw_usb/transfer.d" -MT"src/lw_usb/transfer.o" -o "src/lw_usb/transfer.o" "../src/lw_usb/transfer.c"
../src/lw_usb/transfer.c:14:1: warning: braces around scalar initializer
   14 | EP_RECORD dev0ep = {{ 0 }};         //Endpoint data structure for uninitialized device during enumeration
      | ^~~~~~~~~
../src/lw_usb/transfer.c:14:1: note: (near initialization for 'dev0ep.epAddr')
../src/lw_usb/transfer.c: In function 'XferInTransfer':
../src/lw_usb/transfer.c:200:7: warning: unused variable 'tmpbyte' [-Wunused-variable]
  200 |  BYTE tmpbyte;
      |       ^~~~~~~
../src/lw_usb/transfer.c:199:7: warning: unused variable 'i' [-Wunused-variable]
  199 |  BYTE i;
      |       ^
'Finished building: ../src/lw_usb/transfer.c'
' '
'Building file: ../src/Game.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/Game.o" -IC:/Users/Abdullah/Downloads/ECE385/Final_Project/Final_Project_Vitis/Final_Top_Level/export/Final_Top_Level/sw/Final_Top_Level/standalone_microblaze_0/bspinclude/include -mno-xl-reorder -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/Game.d" -MT"src/Game.o" -o "src/Game.o" "../src/Game.c"
In file included from C:/Users/Abdullah/Downloads/ECE385/Final_Project/Final_Project_Vitis/Final_Top_Level/export/Final_Top_Level/sw/Final_Top_Level/standalone_microblaze_0/bspinclude/include/xil_types.h:48,
                 from C:/Users/Abdullah/Downloads/ECE385/Final_Project/Final_Project_Vitis/Final_Top_Level/export/Final_Top_Level/sw/Final_Top_Level/standalone_microblaze_0/bspinclude/include/xil_printf.h:15,
                 from ../src/Game.c:50:
C:/Users/Abdullah/Downloads/ECE385/Final_Project/Final_Project_Vitis/Final_Top_Level/export/Final_Top_Level/sw/Final_Top_Level/standalone_microblaze_0/bspinclude/include/xparameters.h:490:36: warning: initialization of 'volatile struct TEXT_HDMI_STRUCT *' from 'int' makes pointer from integer without a cast [-Wint-conversion]
  490 | #define XPAR_GAMEIP_0_AXI_BASEADDR 0x44A10000
      |                                    ^~~~~~~~~~
../src/lw_usb/hdmi_text_controller.h:31:54: note: in expansion of macro 'XPAR_GAMEIP_0_AXI_BASEADDR'
   31 | static volatile struct TEXT_HDMI_STRUCT* hdmi_ctrl = XPAR_GAMEIP_0_AXI_BASEADDR;
      |                                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~
C:/Users/Abdullah/Downloads/ECE385/Final_Project/Final_Project_Vitis/Final_Top_Level/export/Final_Top_Level/sw/Final_Top_Level/standalone_microblaze_0/bspinclude/include/xil_types.h:205:25: error: expected identifier before numeric constant
  205 | #define FALSE           0U
      |                         ^~
../src/lw_usb/GenericTypeDefs.h:7:9: note: in expansion of macro 'FALSE'
    7 |         FALSE = 0, TRUE
      |         ^~~~~
make: *** [src/subdir.mk:29: src/Game.o] Error 1
